@@ -26,8 +26,8 @@ dependencies {
     compile 'commons-collections:commons-collections:3.2.2'
     compile 'commons-dbcp:commons-dbcp:1.4'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.8.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.8.RELEASE'
+    compile 'org.springframework:spring-beans:5.1.9.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.9.RELEASE'
     compile 'com.oracle:ojdbc6:11.2.0.4.0-atlassian-hosted'
 
     compile fileTree(dir: 'lib', include: '*.jar')
